<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016 NECTEC
  ~   National Electronics and Computer Technology Center, Thailand
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="16dp">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/area_picker"/>

    <nectec.thai.widget.unit.AreaPicker
            android:id="@+id/area_picker"
            android:minHeight="@dimen/interactive_view_min_height"
            android:hint="พื้นที่"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/area_picker_dialog"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/interactive_view_min_height"
            android:text="@string/show_dialog"
            android:id="@+id/button"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/update_area_value"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/interactive_view_min_height"
            android:text="@string/update"
            android:id="@+id/update_area"/>
</LinearLayout>
